Styled flexboxes/background color/corners of tables in ace.html (will copy over to remaining tower files once 100% finished). Set table layout of upgrade tables to fixed for better readability

--- a/main.css
+++ b/main.css
@@ -12,11 +12,11 @@ header {
 main {
     display: flex;
     flex: 1 calc(100vh - 80px);
-    flex-direction: column;
+    flex-direction: row;
 }
 
-#home {
-    flex-direction: row;
+#about {
+    flex-direction: column;
 }
 
 #login {
